infrastructure/apps/longhorn-system/longhorn/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns-namecheap"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
  hostnames:
    - "longhorn.taylan.dev"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
